added get all endpoints
